--- a/index.css
+++ b/index.css
@@ -24,6 +24,7 @@ html {
 body {
     background: var(--bg-color);
     color: var(--text-color);
+    overflow-x: hidden;
 }
 
 header {
@@ -421,9 +422,13 @@ span {
 
 
 .certificate{
-    background-color: var(--secong-bg-color);
-    width: 100%;
-    height: 100%;
+        width: 100vw;  /* Full width of viewport */
+        min-height: 100vh; /* Full height of viewport */
+        background-color: var(--secong-bg-color); /* Your background color */
+        margin: 0;
+        padding: 20px 0; /* Add padding to keep content aligned */
+        box-sizing: border-box;
+    
 }
 
 .certificate .journey span {
@@ -942,7 +947,6 @@ footer {
 
     #menu-icon{
         display: block;
-        margin-right: 50px;
     }
 
     .navbar{
@@ -1020,6 +1024,10 @@ footer {
         margin: 10px;
     }
 
+    .certificate{
+        width: 100%;
+    }
+
     .myskills{
         grid-template-columns: 1fr;
         margin: 10px;
@@ -1085,6 +1093,12 @@ footer {
         border-bottom: 1px solid var(--text-color);
     }
 
+}
+
+@media (max-width: 350px){
+    .edu p{
+        width: 200px;
+    }
 }
 
 
